--- a/test.html
+++ b/test.html
@@ -4,21 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>F1 Data</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-    <div class="containertxt">
-        <h1>Welcome to the Formula One Info Page!</h1>
-        <p>Formula One is a high-level international auto racing competition 
-            that takes place over multiple races, or Grand Prix, across the world.
-        As some may call it, the pinnacle of motorsport</p>
-        <p>Formula 1 is enjoyed by more than half a billion people, and more than 400 000 people attend Grand Prix's 
-            every year.
-        </p>
+<center>
+        <div class="containertxt1">
+            <h1>Welcome to the Formula One Info Page!</h1>
+        </div> <br><br>
+        <div class="containertxt2"><p>
+        Formula One is a high-level international auto racing competition 
+        that takes place over multiple races, or Grand Prix, across the world.
+        As some may call it, the pinnacle of motorsport</p></div><br>
 
-        <p>Did you know there is also a Formula 1 netflix documentary, and this year, 2024, is going to have some epic moments in there,
-            some very good, like Lando NoWins (Norris) getting his very first victory, and Charles Leclerc breaking his home race curse, and winning
-            the Monaco Grand Prix, and sadly our favorite Daniel Ricciardo's final race in Singapore. This year's Drive to Survive season is going to insane.
-        </p>
+        <div class="containertxt3"><p>
+        Formula 1 is enjoyed by more than half a billion people, and more than 400 000 people attend Grand Prix's 
+        every year.
+        </p></div><br>
 
-        <h3>Below you will find a button that sends you to a list of all drivers past and present, and their information stats</h3>
+        <div class="containertxt4"><p>
+        Did you know there is also a Formula 1 netflix documentary, and this year, 2024, is going to have some epic moments in there,
+        some very good, like Lando NoWins (Norris) getting his very first victory, and Charles Leclerc breaking his home race curse, and winning
+        the Monaco Grand Prix, and sadly our favorite Daniel Ricciardo's final race in Singapore. This year's Drive to Survive season is going to insane.
+        </p></div><br>
+
+        <div class="containertxt5"><h3>Below you will find a button that sends you to a list of all drivers past and present, and their information stats</h3></div>
 </body>
