changed versions of the api

--- a/test.html
+++ b/test.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>F1 Data</title>
     <link rel="stylesheet" href="style2.css">
-</head>
 <body>
-<center>
+    <center>
+        <div class="containertxt">
         <div class="containertxt1">
             <h1>Welcome to the Formula One Info Page!</h1>
         </div> <br><br>
@@ -28,4 +28,32 @@
         </p></div><br>
 
         <div class="containertxt5"><h3>Below you will find a button that sends you to a list of all drivers past and present, and their information stats</h3></div>
+
+        <center><button class="btn" onclick="window.location.href='index.html'">click to go to driver lookup</button></center>
+        
+    </div>
+
+        </center>
+
+        <div class="text1">
+            <img src="https://media.formula1.com/image/upload/f_auto,c_limit,w_960,q_auto/f_auto/q_auto/fom-website/2024/United%20States%20(Austin)/mclaren-austin-livery-2024-1" alt="mclarenlivery" class="mclarenlivery">
+            <a href="https://www.formula1.com/en/latest/article/mclaren-become-latest-team-to-unveil-austin-livery-as-team-bring-back-chrome.2y7qjuLUGlzKG8O792SDBH" div class="txt1">McLaren become latest team to unveil Austin livery as they bring back chrome design</a>
+        </div>
+
+        <div class="text2">
+            <img src="https://media.formula1.com/image/upload/f_auto,c_limit,w_630,q_auto/f_auto,c_fill,q_auto,w_420,t_16by9Centre,g_faces,ar_16:9/fom-website/2024/Miscellaneous/BWT%20Alpine%20Formula%20One%20Team%20x%20Indiana%20Jones%20(1)" alt="alpinelivery" class="alpinelivery">
+            <a href="https://www.formula1.com/en/latest/article/alpine-present-indiana-jones-inspired-livery-for-united-states-grand-prix.18yyEVXOmIBK2TlUzWUJul" div class="txt2">Alpine present Indiana Jones-inspired livery for United States Grand Prix</a>
+        </div>
+
+        <div class="text3">
+            <img src="https://media.formula1.com/image/upload/f_auto,c_limit,w_630,q_auto/f_auto,c_fill,q_auto,w_420,g_faces,ar_16:9/fom-website/2024/Miscellaneous/haas-livery-austin-2024" alt="haaslivery" class="haaslivery">
+            <a href="https://www.formula1.com/en/latest/article/haas-to-run-special-livery-for-home-race-weekend-at-circuit-of-the-americas.6fZaqT80FqADPx7359vk79" div class="txt3">Haas to run special livery for home race weekend at Circuit of The Americas</a>
+        </div>
+
+        <div class="text4">
+            <img src="https://media.formula1.com/image/upload/f_auto,c_limit,w_960,q_auto/t_16by9North/f_auto/q_auto/trackside-images/2024/F1_Grand_Prix_of_Italy___Practice/2169431692" alt="colapinto" class="colapinto">
+            <a href="https://www.formula1.com/en/latest/article/he-deserves-a-place-in-f1-vowles-on-his-efforts-to-seal-sauber-seat-for.1bn3apLWS2gq2cNa7uuD6K" div class="txt4">‘He deserves a place in F1’ – Vowles on his efforts to seal Sauber seat for Colapinto</a>
+        </div>
+
 </body>
+</head>
